# elementary-ide

./: .elementary-ide.proj  CMakeLists.txt  README.md
data/: CMakeLists.txt  com.github.donadigo.elementary-ide.desktop  org.pantheon.agent-polkit.desktop.in
schemas/: CMakeLists.txt  com.github.donadigo.elementary-ide.gschema.xml  org.donadigo.elementary-ide.gschema.xml
src/: BaseDialog.vala  BottomWidget.vala  BuildSystem.vala  CMakeLists.txt  CMakeProject.vala  CodeParser.vala  Constants.vala  DebugSystem.vala  Document.vala  DocumentManager.vala  EditorView.vala  EditorWindow.vala  FileSearchEngine.vala  IDEApplication.vala  IDEBuffer.vala  IDEWindow.vala  InfoWindow.vala  Location.vala  Makefile  MenuButton.vala  Project.vala  Report.vala  ReportWidget.vala  Sidebar.vala  SidebarFileRow.vala  SourceList.vala  Template.vala  TerminalWidget.vala  ToolBar.vala  Utils.vala  cmake_install.cmake  config.vala  config.vala.cmake
src/BuildSystem/: BuildSystem.vala  CMakeBuildSystem.vala  CMakeCommand.vala  CMakeParser.vala  CMakeVariable.vala
src/BuildSystems/: CMakeBuildSystem.vala  CMakeParser.vala
src/CMake/: CMakeCommand.vala  CMakeParser.vala  CMakeVariable.vala
src/Dialogs/: BuildOptionsDialog.vala  EditorPreferencesDialog.vala  EditorPreferencesPage.vala  NewFileDialog.vala  OpenProjectDialog.vala  PreferencesDialog.vala
src/Projects/: CMakeProject.vala  GenericProject.vala  NativeProject.vala
src/Providers/: WordCompletionProvider.vala
src/Services/: IDESettings.vala  Settings.vala
src/Vala/: Locator.vala  ValaBlockLocator.vala  ValaCodeParser.vala  ValaDefinitionWriter.vala  ValaDocumentProvider.vala  ValaDocumentation.vala  ValaIndex.vala  ValaSymbolTree.vala
src/Widgets/: BottomStack.vala  BottomWidget.vala  BuildOutputWidget.vala  CategoryView.vala  Document.vala  EditorView.vala  EditorWindow.vala  FileSearchView.vala  InfoWindow.vala  MenuButton.vala  ProjectView.vala  ReportWidget.vala  SearchToolbar.vala  SettingsFrame.vala  Sidebar.vala  SourceList.vala  SymbolTreeView.vala  TabWidget.vala  Terminal.vala  TerminalWidget.vala  ToolBar.vala
vapi/: gtksourceview-3.0.vapi
