include(Translations)

#configure_file_translation(${CMAKE_SOURCE_DIR}/data/org.pantheon.agent-polkit.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/org.pantheon.agent-polkit.desktop ${CMAKE_SOURCE_DIR}/po/)
#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.pantheon.agent-polkit.desktop DESTINATION share/applications)